src/test/ui/parser/pat-ref-enum.stderr
error: expected identifier, found enum pattern
  --> $DIR/pat-ref-enum.rs:5:11
   |
LL |       ref Some(i) => {} //~ ERROR expected identifier, found enum pattern
   |           ^^^^

error: aborting due to previous error

